--- a/index.html
+++ b/index.html
@@ -1,70 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel valley</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700;800;900&family=Work+Sans:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style/blog.css">
-</head>
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style/blog.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <div class="nav">
-                <div class="f-nav">
-                    <img src="Images/Group 40071 (2).png" alt="">
-                    <h3 class="nav-title">Hero <span class="part2-of-title">Travel</span> </h3>
-                </div>
-                <div>
-                    <ul class="l-nav">
-                        <li><a style="color: #ff5400;" href="">Home</a></li>
-                        <li><a href="">Packages</a></li>
-                        <li><a href="">Testimonial</a></li>
-                        <li><a href="">Blog</a></li>
-                        <li><a href="">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <section class="banner">
-                <h1 class="banner-title">
-                    Explore Your Travel
-                </h1>
-                <p class="banner-discription">
-                    Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim ac quis sapien urna eu phasellus.
-                </p>
-                <div class="options-inside-banner">
-                    <div class="option">
-                        <select class="inside-option">
-                            <option>Where go</option>
-                        </select>
-                    </div>
-                    <div class="option">
-                        <select class="inside-option">
-                            <option>When</option>
-                        </select>
-                    </div>
-                    <div class="option">
-                        <select class="inside-option">
-                            <option>Select Type</option>
-                        </select>
-                    </div>
-                    <div class="banner-btn-div-class">
-                        <button class="banner-btn"><i id="banner-btn-icon" class="fa fa-search"></i>Find Now</button>
-                    </div>
-                </div>   
-        </section>
+      <nav>
+        <div class="nav">
+          <div class="f-nav">
+            <img src="Images/Group 40071 (2).png" alt="" />
+            <h3 class="nav-title">
+              Hero <span class="part2-of-title">Travel</span>
+            </h3>
+          </div>
+          <div class="nav-ul">
+            <ul class="l-nav">
+              <li><a style="color: #ff5400" href="">Home</a></li>
+              <li><a href="">Packages</a></li>
+              <li><a href="">Testimonial</a></li>
+              <li><a href="">Blog</a></li>
+              <li><a href="">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <section class="banner">
+        <h1 class="banner-title">Explore Your Travel</h1>
+        <p class="banner-discription">
+          Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
+          adipiscing. In et odio <br>
+          enim ac quis sapien urna eu phasellus.
+        </p>
+        <div class="options-inside-banner">
+          <div class="option">
+            <select class="inside-option">
+              <option>Where go</option>
+            </select>
+          </div>
+          <div class="option">
+            <select class="inside-option">
+              <option>When</option>
+            </select>
+          </div>
+          <div class="option">
+            <select class="inside-option">
+              <option>Select Type</option>
+            </select>
+          </div>
+          <div class="banner-btn-div-class">
+            <button class="banner-btn">
+              <i id="banner-btn-icon" class="fa fa-search"></i>Find Now
+            </button>
+          </div>
+        </div>
+      </section>
     </header>
-    <main>
-        
+    <main class="main">
+      <section class="Popular-Tours">
+        <div>
+          <h3 class="popular-tour-title">Our Popular Tours</h3>
+          <p class="popular-tour-discription">
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit <br />
+            massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+          <ul>
+            <li class="popular-tour-li">
+              Tempus euismod lacus mauris dignissim quis in ultrices. Magna
+              <br />
+              nullam odio neque diam. Sociis erat at .
+            </li>
+            <li id="middle-tour" class="popular-tour-li">
+              Adipiscing ornare pellentesque mauris volutpat tortor vitae platea
+              <br />
+              porta lacus. Lectus suspendisse nullam.
+            </li>
+            <li class="popular-tour-li">
+              Accumsan eget et turpis praesent lorem egestas enim elit <br />
+              bibendum. Risus at in.
+            </li>
+          </ul>
+          <p class="last-discription-popular-tour">
+            Amet consectetur. Vulputate commodo felis molestie risus <br />
+            ornare nulla amet et. Libero commodo sagittis dignissim adipiscing
+            quis. <br />
+            Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus
+            <br />
+            semper tincidunt.
+          </p>
+          <button class="read-more">Read More</button>
+        </div>
+        <div>
+          <img src="Images/Rectangle 4.png" alt="" />
+        </div>
+      </section>
     </main>
-</body>
-
+  </body>
 </html>
