--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1 class="banner-title">Explore Your Travel</h1>
         <p class="banner-discription">
           Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
-          adipiscing. In et odio <br>
+          adipiscing. In et odio <br />
           enim ac quis sapien urna eu phasellus.
         </p>
         <div class="options-inside-banner">
@@ -109,6 +109,59 @@
         </div>
         <div>
           <img src="Images/Rectangle 4.png" alt="" />
+        </div>
+      </section>
+
+      <section class="gallery">
+        <div class="gallery-text">
+          <h1 class="gallery-title">Choose Your Destination</h1>
+          <p class="gallery-description">
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+        </div>
+        <div class="gallery-pic">
+          <div class="first">
+            <img src="Images/Rectangle 5.png" alt="" />
+            <img src="Images/Rectangle 8.png" alt="" />
+          </div>
+          <div class="second">
+            <img src="Images/Rectangle 6.png" alt="" />
+            <img src="Images/Rectangle 7.png" alt="" />
+            <img src="Images/Rectangle 9.png" alt="" />
+          </div>
+          <div class="third">
+            <img src="Images/Rectangle 11.png" alt="" />
+            <img src="Images/Rectangle 10.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <section class="why">
+        <div>
+          <h3 class="why-title">Why Choose Us</h3>
+          <p class="why-description">
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.
+          </p>
+        </div>
+        <div class="why-container">
+          <div class="hotel">
+            <img src="Images/hotel 1.png" alt="">
+            <h4 class="container-title">Handpicked Hotels</h4>
+            <p class="container-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare <br> nulla amet et. Libero commodo sagittis dignissim adipiscing quis. <br> Habitant adipiscing risus natoque aliquet.</p>
+          </div>
+          <div class="map">
+            <img src="Images/map 1.png" alt="">
+            <h4 class="container-title">World Class Service</h4>
+            <p class="container-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare <br> nulla amet et. Libero commodo sagittis dignissim adipiscing quis. <br> Habitant adipiscing risus natoque aliquet.</p>
+          </div>
+        </div>
+        <div id="price-tag" class="why-container">
+          <div class="price-tag">
+            <img src="Images/price-tag 1.png" alt="">
+            <h4 class="container-title">Best Price Guarantee</h4>
+            <p class="container-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare <br> nulla amet et. Libero commodo sagittis dignissim adipiscing quis. <br> Habitant adipiscing risus natoque aliquet.</p>
+          </div>
         </div>
       </section>
     </main>
