--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel valley</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700;800&display=swap"
-      rel="stylesheet"
-    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -141,27 +135,66 @@
         <div>
           <h3 class="why-title">Why Choose Us</h3>
           <p class="why-description">
-            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. <br />
+            Sodales dictumst nec nibh pellentesque.
           </p>
         </div>
         <div class="why-container">
           <div class="hotel">
-            <img src="Images/hotel 1.png" alt="">
+            <img src="Images/hotel 1.png" alt="" />
             <h4 class="container-title">Handpicked Hotels</h4>
-            <p class="container-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare <br> nulla amet et. Libero commodo sagittis dignissim adipiscing quis. <br> Habitant adipiscing risus natoque aliquet.</p>
+            <p class="container-description">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              <br />
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              <br />
+              Habitant adipiscing risus natoque aliquet.
+            </p>
           </div>
           <div class="map">
-            <img src="Images/map 1.png" alt="">
+            <img src="Images/map 1.png" alt="" />
             <h4 class="container-title">World Class Service</h4>
-            <p class="container-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare <br> nulla amet et. Libero commodo sagittis dignissim adipiscing quis. <br> Habitant adipiscing risus natoque aliquet.</p>
+            <p class="container-description">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              <br />
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              <br />
+              Habitant adipiscing risus natoque aliquet.
+            </p>
           </div>
         </div>
         <div id="price-tag" class="why-container">
           <div class="price-tag">
-            <img src="Images/price-tag 1.png" alt="">
+            <img src="Images/price-tag 1.png" alt="" />
             <h4 class="container-title">Best Price Guarantee</h4>
-            <p class="container-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare <br> nulla amet et. Libero commodo sagittis dignissim adipiscing quis. <br> Habitant adipiscing risus natoque aliquet.</p>
+            <p class="container-description">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              <br />
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              <br />
+              Habitant adipiscing risus natoque aliquet.
+            </p>
           </div>
+        </div>
+      </section>
+
+      <section class="video-container">
+        <div class="video-details">
+          <h1 class="video-title">A Simple Perfect Place <br> To Get Lost</h1>
+        <p class="video-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla <br> amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+        <ul>
+          <li>
+            Adipiscing ornare pellentesque mauris volutpat tortor vitae <br> platea porta lacus. Lectus suspendisse nullam.
+          </li>
+          <li class="video-li">
+            Adipiscing ornare pellentesque mauris volutpat tortor vitae <br> platea porta lacus. Lectus suspendisse nullam.
+          </li>
+        </ul>
+        <button id="see-more-btn" class="read-more">See More</button>
+        </div>
+        <div class="video">
+          <img src="Images/Group 40089.png" alt="">
         </div>
       </section>
     </main>
