--- a/index.html
+++ b/index.html
@@ -181,22 +181,56 @@
 
       <section class="video-container">
         <div class="video-details">
-          <h1 class="video-title">A Simple Perfect Place <br> To Get Lost</h1>
-        <p class="video-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla <br> amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
-        <ul>
-          <li>
-            Adipiscing ornare pellentesque mauris volutpat tortor vitae <br> platea porta lacus. Lectus suspendisse nullam.
-          </li>
-          <li class="video-li">
-            Adipiscing ornare pellentesque mauris volutpat tortor vitae <br> platea porta lacus. Lectus suspendisse nullam.
-          </li>
-        </ul>
-        <button id="see-more-btn" class="read-more">See More</button>
+          <h1 class="video-title">
+            A Simple Perfect Place <br />
+            To Get Lost
+          </h1>
+          <p class="video-description">
+            Amet consectetur. Vulputate commodo felis molestie risus ornare
+            nulla <br />
+            amet et. Libero commodo sagittis dignissim adipiscing quis.
+          </p>
+          <ul>
+            <li>
+              Adipiscing ornare pellentesque mauris volutpat tortor vitae <br />
+              platea porta lacus. Lectus suspendisse nullam.
+            </li>
+            <li class="video-li">
+              Adipiscing ornare pellentesque mauris volutpat tortor vitae <br />
+              platea porta lacus. Lectus suspendisse nullam.
+            </li>
+          </ul>
+          <button id="see-more-btn" class="read-more">See More</button>
         </div>
         <div class="video">
-          <img src="Images/Group 40089.png" alt="">
+          <img src="Images/Group 40089.png" alt="" />
         </div>
       </section>
+
+      <section class="news-later">
+        <div class="news-later-details">
+          <div class="sub-news">
+            <h4 class="news-title">Newslette</h4>
+            <p class="news-description">Get your daily dose of travel news & tips. Sign up today!</p>
+            <br>
+            <hr>
+            <div class="namebox-news">
+              <input type="text" name="" id="" placeholder="Enter your name">
+            </div>
+            <div id="email-news" class="namebox-news">
+              <input type="email" name="" id="" placeholder="Enter your email">
+            </div>
+            <button class="btn-subscribe">Subscribe</button>
+          </div>
+        </div>
+        <div class="news-pic">
+          <img src="Images/Rectangle 8 (1).png" alt="">
+        </div>
+      </section>
+      <div class="save-up">
+        <p class="save-up-description">Travel.com</p>
+        <h3 class="save-up-title">Save up to 70%</h3>
+      </div>
     </main>
   </body>
 </html>
