--- a/index.html
+++ b/index.html
@@ -227,10 +227,29 @@
           <img src="Images/Rectangle 8 (1).png" alt="">
         </div>
       </section>
+      <!-- save-up is a part of News later section -->
       <div class="save-up">
         <p class="save-up-description">Travel.com</p>
         <h3 class="save-up-title">Save up to 70%</h3>
       </div>
     </main>
+    <footer>
+      <div>
+        <div class="footer-first-part">
+          <img src="Images/Group 40071 (2).png" alt="">
+          <h1 class="footer-title">Hero <span class="part2-of-title-footer">Travel</span></h1>
+        </div>
+        <p class="footer-description">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+        <img src="Images/Social.png" alt="">
+        <div class="father-of-line">
+          <div class="line"></div>
+        </div>
+        <div class="copy-right">
+          <p class="description-of-copyright">
+            2017, All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
